--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "truffle-box",
+  "name": "moxie-box",
+  "namespace": "moxiesuite",
   "version": "1.0.5",
-  "description": "Truffle project boilerplate utility",
+  "description": "Moxie project boilerplate utility",
   "main": "box.js",
   "scripts": {
     "lint": "eslint ./index.js ./lib || true",
     "test": "mocha"
   },
   "keywords": [
-    "ethereum",
-    "truffle",
+    "vapory",
+    "moxie",
     "project",
     "boilerplate"
   ],
-  "author": "g. nicholas d'andrea <gnidan@trufflesuite.com>",
+  "author": "g. nicholas d'andrea <gnidan@moxiesuite.com>",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^4.0.0",
     "mocha": "^3.4.2",
-    "truffle-config": "^1.0.0"
+    "moxie-config": "^1.0.0"
   },
   "dependencies": {
     "fs-extra": "^3.0.1",
